--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "notype-app",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,15 +8,59 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
+    "@expo-google-fonts/inter": "^0.2.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@georstat/react-native-image-gallery": "^1.1.0",
+    "@ja-ka/react-native-fade-in-flatlist": "^1.0.7",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@stripe/stripe-react-native": "0.6.1",
+    "@use-expo/font": "^2.0.0",
+    "country-data-list": "^1.2.1",
+    "expo": "^45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-dev-client": "~1.0.1",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
+    "expo-web-browser": "~10.2.1",
+    "firebase": "^9.5.0",
+    "firebaseui": "^6.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-androw": "^0.0.34",
+    "react-native-date-picker": "^4.1.1",
+    "react-native-dropdown-picker": "^5.2.3",
+    "react-native-dynamic-vector-icons": "^1.1.6",
+    "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.2.0",
+    "react-native-modal": "^13.0.0",
+    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-ultimate-modal-picker": "^1.1.0",
+    "react-native-unimodules": "~0.15.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
+    "react-number-format": "^4.8.0",
+    "tslib": "^2.3.1",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^27.0.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "@types/react-test-renderer": "^17.0.1",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
