--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "expo-barcode-scanner": "~11.3.0",
     "expo-dev-client": "~1.0.1",
     "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.1",
+    "fiction-expo-restart": "^1.1.3",
     "firebase": "^9.5.0",
     "firebaseui": "^6.0.0",
     "react": "17.0.2",
@@ -40,8 +42,10 @@
     "react-native-dynamic-vector-icons": "^1.1.6",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.0",
+    "react-native-mmkv-storage": "^0.8.0",
     "react-native-modal": "^13.0.0",
     "react-native-qrcode-svg": "^6.1.2",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
@@ -51,8 +55,7 @@
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1",
     "react-number-format": "^4.8.0",
-    "tslib": "^2.3.1",
-    "expo-splash-screen": "~0.15.1"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
