--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/netinfo": "8.2.0",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@stripe/stripe-react-native": "0.6.1",
@@ -44,11 +45,13 @@
     "react-native-flash-message": "^0.2.0",
     "react-native-mmkv-storage": "^0.8.0",
     "react-native-modal": "^13.0.0",
+    "react-native-pager-view": "^5.4.25",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-ultimate-modal-picker": "^1.1.0",
     "react-native-unimodules": "~0.15.0",
     "react-native-vector-icons": "^8.1.0",
